--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_HalbzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_HalbzylinderRout.cshtml
@@ -29,59 +29,136 @@
                             @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
                         </div>
                     </div>
+                    @if (ViewBag.Habel != null)
+                    {
+                        <div id="product_desciptions">
 
-                    <div id="product_desciptions">
-
-                        <div style="margin-bottom: 50px;">
-                            <label>Name</label>
-                            <input asp-for="Name" required class="form-control" type="text" name="Name" />
-                        </div>
-
-                        <div style="margin-bottom: 50px;">
-                            <label>Firmenname</label>
-                            <input asp-for="companyName" required class="form-control" type="text" />
-                        </div>
-
-                        <div style="margin-bottom: 50px;">
-                            <label>Name System</label>
-                            <input asp-for="NameSystem" required class="form-control" type="text" />
-                        </div>
-
-
-                        <div style="margin-bottom: 50px;">
-                            <label>Beschreibungen</label>
-                            <textarea asp-for="description"  class="form-control" id="exampleFormControlTextarea1"></textarea>
-                        </div>
-                        @if (ViewBag.Content != null)
-                        {
-                            <div>
-                                <h3>Submitted Content:</h3>
-                                <div>@Html.Raw(ViewBag.Content)</div>
-                            </div>
-                        }
-
-                        <div style="margin-bottom: 50px;">
-                            <label>Price</label>
-                            <input asp-for="Price" required class="form-control" />
-                        </div>
-
-                        <h1>Aussen <input id="addAussen_Innen" class="btn btn-success" type="button" value="+" /><input id="addAussen_Innen_remove" class="btn btn-danger" type="button" value="-" /></h1>
-                        <div id="Aussen_Innen_ProfilDopel">
-
-                            <div id="AussenProfilDopel">
-                                <input class="form-control" type="number" placeholder="Aussen" step="0.01" name="aussen" />
-                                <input class="form-control" type="number" placeholder="Price" step="0.01" name="costSizeAussen" />
+                            <div style="margin-bottom: 50px;">
+                                <label>Name</label>
+                                <input asp-for="Name" value="@ViewBag.Habel.Name" required class="form-control" type="text" name="Name" />
                             </div>
 
-                        </div>
-                        <div id="productOptions">
-                        </div>
+                            <div style="margin-bottom: 50px;">
+                                <label>Firmenname</label>
+                                <input asp-for="companyName" value="@ViewBag.Habel.companyName" required class="form-control" type="text" />
+                            </div>
 
-                    </div>
-                    <button id="createBlockBtn" type="button" class="btn btn-success">Optionen hinzufügen</button>
-                    <button id="addInputBtn" type="button" class="btn btn-success">+</button>
-                    <button id="RemoveInputBtn" type="button" class="btn btn-danger">-</button>
-                    <input type="submit" class="btn btn-success" id="input" value="Halbzylinder erstellen" />
+                            <div style="margin-bottom: 50px;">
+                                <label>Name System</label>
+
+                                <select asp-for="NameSystem" required id="DoppelSys" class="form-select">
+
+                                    @foreach (var list in ViewBag.System)
+                                    {
+                                        if (ViewBag.Habel.NameSystem == list)
+                                        {
+                                            <option selected>@list</option>
+                                        }
+                                        else
+                                        {
+                                            <option>@list</option>
+                                        }
+                                    }
+                                </select>
+
+                            </div>
+
+                            <div style="margin-bottom: 50px;">
+                                <label>Beschreibungen</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1">@ViewBag.Habel.description</textarea>
+                            </div>
+                           
+                            <div style="margin-bottom: 50px;">
+                                <label>Price</label>
+                                <input asp-for="Price" value="@ViewBag.Habel.Price" required class="form-control" />
+                            </div>
+
+                            <h1>Aussen <input id="addAussen_Innen" class="btn btn-success" type="button" value="+" /><input id="addAussen_Innen_remove" class="btn btn-danger" type="button" value="-" /></h1>
+                            <div id="Aussen_Innen_ProfilDopel">
+
+                                <div id="AussenProfilDopel">
+                                    @if (ViewBag.Size != null)
+                                    {
+                                        @foreach (var item in ViewBag.Size)
+                                        {
+                                            <input class="form-control" type="number" value="@item.aussen" step="0.01" name="aussen" />
+                                            <input class="form-control" type="number" value="@item.costAussen" step="0.01" name="costSizeAussen" />
+                                        }
+                                    }
+                                    else
+                                    {
+                                        <input class="form-control" type="number" placeholder="Aussen" step="0.01" name="aussen" />
+                                        <input class="form-control" type="number" placeholder="Price" step="0.01" name="costSizeAussen" />
+                                    }
+                                   
+                                </div>
+
+                            </div>
+                            <div id="productOptions">
+                            </div>
+
+                        </div>
+                        <button id="createBlockBtn" type="button" class="btn btn-success">Optionen hinzufügen</button>
+                        <button id="addInputBtn" type="button" class="btn btn-success">+</button>
+                        <button id="RemoveInputBtn" type="button" class="btn btn-danger">-</button>
+                        <input type="submit" class="btn btn-success" id="input" value="Halbzylinder erstellen" />
+                    }
+                    else
+                    {
+                        <div id="product_desciptions">
+
+                            <div style="margin-bottom: 50px;">
+                                <label>Name</label>
+                                <input asp-for="Name" required class="form-control" type="text" name="Name" />
+                            </div>
+
+                            <div style="margin-bottom: 50px;">
+                                <label>Firmenname</label>
+                                <input asp-for="companyName" required class="form-control" type="text" />
+                            </div>
+
+                            <div style="margin-bottom: 50px;">
+                                <label>Name System</label>
+                                <input asp-for="NameSystem" required class="form-control" type="text" />
+                            </div>
+
+
+                            <div style="margin-bottom: 50px;">
+                                <label>Beschreibungen</label>
+                                <textarea asp-for="description" class="form-control" id="exampleFormControlTextarea1"></textarea>
+                            </div>
+                            @if (ViewBag.Content != null)
+                            {
+                                <div>
+                                    <h3>Submitted Content:</h3>
+                                    <div>@Html.Raw(ViewBag.Content)</div>
+                                </div>
+                            }
+
+                            <div style="margin-bottom: 50px;">
+                                <label>Price</label>
+                                <input asp-for="Price" required class="form-control" />
+                            </div>
+
+                            <h1>Aussen <input id="addAussen_Innen" class="btn btn-success" type="button" value="+" /><input id="addAussen_Innen_remove" class="btn btn-danger" type="button" value="-" /></h1>
+                            <div id="Aussen_Innen_ProfilDopel">
+
+                                <div id="AussenProfilDopel">
+                                    <input class="form-control" type="number" placeholder="Aussen" step="0.01" name="aussen" />
+                                    <input class="form-control" type="number" placeholder="Price" step="0.01" name="costSizeAussen" />
+                                </div>
+
+                            </div>
+                            <div id="productOptions">
+                            </div>
+
+                        </div>
+                        <button id="createBlockBtn" type="button" class="btn btn-success">Optionen hinzufügen</button>
+                        <button id="addInputBtn" type="button" class="btn btn-success">+</button>
+                        <button id="RemoveInputBtn" type="button" class="btn btn-danger">-</button>
+                        <input type="submit" class="btn btn-success" id="input" value="Halbzylinder erstellen" />
+                    }
+                    
                 </form>
 
             </div>
@@ -104,7 +181,7 @@
                             <th>Editieren</th>
                             <th>Optionen</th>
                             <th>Löschen</th>
-
+                            <th>Vorlage</th>
                             @foreach (var item in ViewBag.item)
                             {
                                 <td id="rowTable" class="table-info">@item.companyName</td>
@@ -120,6 +197,7 @@
                                     </a>
                                 </td>
                                 <td id="rowTable" class="table-info"><a href="@Url.Action("Delete_Halbzylinder","Home", new { item.Id })"><img src="@("/Image/entfernen.png")" height="30" width="30" /></a></td>
+                                <td id="rowTable" class="table-info"><a href="@Url.Action("Profil_HalbzylinderRout","Home", new { id = item.Id })"><img src="@("/image/3d-modeling.png")" height="30" width="30" /></a></td>
                             }
 
                         </tr>
