--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/VorhangschlossRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/VorhangschlossRout.cshtml
@@ -31,58 +31,146 @@
                         </div>
                     </div>
 
-                    <div id="product_desciptions">
+                    @if (ViewBag.Vorhang != null)
+                    {
+                        <div id="product_desciptions">
 
-                        <div style="margin-bottom: 50px;">
-                            <label>Name</label>
-                            <input asp-for="Name" required class="form-control" type="text" name="Name" />
-                        </div>
-
-                        <div style="margin-bottom: 50px;">
-                            <label>Firmenname</label>
-                            <input asp-for="companyName" required class="form-control" type="text" />
-                        </div>
-
-                        <div style="margin-bottom: 50px;">
-                            <label>Name System</label>
-                            <input asp-for="NameSystem" required class="form-control" type="text" />
-                        </div>
-
-                        <div style="margin-bottom: 50px;">
-                            <label>Beschreibungen</label>
-                            <textarea asp-for="description"  class="form-control" id="exampleFormControlTextarea1"></textarea>
-                        </div>
-                        @if (ViewBag.Content != null)
-                        {
-                            <div>
-                                <h3>Submitted Content:</h3>
-                                <div>@Html.Raw(ViewBag.Content)</div>
+                            <div style="margin-bottom: 50px;">
+                                <label>Name</label>
+                                <input asp-for="Name" required value="@ViewBag.Vorhang.Name" class="form-control" type="text" name="Name" />
                             </div>
-                        }
 
-                        <div style="margin-bottom: 50px;">
-                            <label>Price</label>
-                            <input asp-for="Price" class="form-control" />
-                        </div>
-                        <h1>Größe<input id="addAussen_Innen" class="btn btn-success" type="button" value="+" /><input id="addAussen_Innen_remove" class="btn btn-danger" type="button" value="-" /></h1>
-                        <div id="Aussen_Innen_ProfilDopel">
-
-                            <div id="AllSize">
-                                <input type="number" placeholder="Größe" required class="form-control" step="0.01" name="aussen" />
-
+                            <div style="margin-bottom: 50px;">
+                                <label>Firmenname</label>
+                                <input asp-for="companyName" value="@ViewBag.Vorhang.companyName" required class="form-control" type="text" />
                             </div>
-                            <div id="costedSize">
-                                <input type="number" placeholder="Price" required class="form-control" step="0.01" name="costSize" />
-                            </div>
-                        </div>
-                        <div id="productOptions">
-                        </div>
 
-                    </div>
-                    <button id="createBlockBtn" type="button" class="btn btn-success">Hinzufügen von Optionen</button>
-                    <button id="addInputBtn" type="button" class="btn btn-success">+</button>
-                    <button id="RemoveInputBtn" type="button" class="btn btn-danger">-</button>
-                    <input type="submit" class="btn btn-success" id="input" value="Vorhangschloss erstellen" />
+                            <div style="margin-bottom: 50px;">
+                                <label>Name System</label>
+                                <select asp-for="NameSystem" required  class="form-select">
+
+                                    @foreach (var list in ViewBag.System)
+                                    {
+                                        if (ViewBag.Vorhang.NameSystem == list)
+                                        {
+                                            <option selected>@list</option>
+                                        }
+                                        else
+                                        {
+                                            <option>@list</option>
+                                        }
+                                    }
+                                </select>
+                            </div>
+
+                            <div style="margin-bottom: 50px;">
+                                <label>Beschreibungen</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1">@ViewBag.Vorhang.description</textarea>
+                            </div>
+                           
+                            <div style="margin-bottom: 50px;">
+                                <label>Price</label>
+                                <input asp-for="Price" value="@ViewBag.Vorhang.Price" class="form-control" />
+                            </div>
+                            <h1>Größe<input id="addAussen_Innen" class="btn btn-success" type="button" value="+" /><input id="addAussen_Innen_remove" class="btn btn-danger" type="button" value="-" /></h1>
+                            <div id="Aussen_Innen_ProfilDopel">
+
+                                <div id="AllSize">
+                                    @if (ViewBag.Groze != null)
+                                    {
+                                        @foreach (var item in ViewBag.Groze)
+                                        {
+                                            <input type="number" value="@item.sizeVorhangschloss" required class="form-control" step="0.01" name="aussen" />
+                                        }
+                                        
+                                    }
+                                    else
+                                    {
+                                        <input type="number" placeholder="Größe" required class="form-control" step="0.01" name="aussen" />
+                                    }
+                                    
+
+                                </div>
+                                <div id="costedSize">
+                                    @if (ViewBag.Groze != null)
+                                    {
+                                        @foreach (var item in ViewBag.Groze)
+                                        {
+                                            <input type="number" value="@item.Cost" required class="form-control" step="0.01" name="costSize" />
+                                        }
+                                    }
+                                    else
+                                    {
+                                        <input type="number" placeholder="Price" required class="form-control" step="0.01" name="costSize" />
+                                    }
+                                   
+                                </div>
+                            </div>
+                            <div id="productOptions">
+                            </div>
+
+                        </div>
+                        <button id="createBlockBtn" type="button" class="btn btn-success">Hinzufügen von Optionen</button>
+                        <button id="addInputBtn" type="button" class="btn btn-success">+</button>
+                        <button id="RemoveInputBtn" type="button" class="btn btn-danger">-</button>
+                        <input type="submit" class="btn btn-success" id="input" value="Vorhangschloss erstellen" />
+                    }
+                    else
+                    {
+                        <div id="product_desciptions">
+
+                            <div style="margin-bottom: 50px;">
+                                <label>Name</label>
+                                <input asp-for="Name" required class="form-control" type="text" name="Name" />
+                            </div>
+
+                            <div style="margin-bottom: 50px;">
+                                <label>Firmenname</label>
+                                <input asp-for="companyName" required class="form-control" type="text" />
+                            </div>
+
+                            <div style="margin-bottom: 50px;">
+                                <label>Name System</label>
+                                <input asp-for="NameSystem" required class="form-control" type="text" />
+                            </div>
+
+                            <div style="margin-bottom: 50px;">
+                                <label>Beschreibungen</label>
+                                <textarea asp-for="description" class="form-control" id="exampleFormControlTextarea1"></textarea>
+                            </div>
+                            @if (ViewBag.Content != null)
+                            {
+                                <div>
+                                    <h3>Submitted Content:</h3>
+                                    <div>@Html.Raw(ViewBag.Content)</div>
+                                </div>
+                            }
+
+                            <div style="margin-bottom: 50px;">
+                                <label>Price</label>
+                                <input asp-for="Price" class="form-control" />
+                            </div>
+                            <h1>Größe<input id="addAussen_Innen" class="btn btn-success" type="button" value="+" /><input id="addAussen_Innen_remove" class="btn btn-danger" type="button" value="-" /></h1>
+                            <div id="Aussen_Innen_ProfilDopel">
+
+                                <div id="AllSize">
+                                    <input type="number" placeholder="Größe" required class="form-control" step="0.01" name="aussen" />
+
+                                </div>
+                                <div id="costedSize">
+                                    <input type="number" placeholder="Price" required class="form-control" step="0.01" name="costSize" />
+                                </div>
+                            </div>
+                            <div id="productOptions">
+                            </div>
+
+                        </div>
+                        <button id="createBlockBtn" type="button" class="btn btn-success">Hinzufügen von Optionen</button>
+                        <button id="addInputBtn" type="button" class="btn btn-success">+</button>
+                        <button id="RemoveInputBtn" type="button" class="btn btn-danger">-</button>
+                        <input type="submit" class="btn btn-success" id="input" value="Vorhangschloss erstellen" />
+                    }
+                    
                 </form>
 
 
@@ -107,6 +195,7 @@
                             <th>Bearbeiten</th>
                             <th>Optionen</th>
                             <th>Löschen</th>
+                            <th>Vorlage</th>
 
                             @foreach (var item in ViewBag.item)
                             {
@@ -123,6 +212,7 @@
                                     </a>
                                 </td>
                                 <td id="rowTable" class="table-info"><a href="@Url.Action("Delete_Vorhan","Home", new { item.Id })"><img src="@("/Image/entfernen.png")" height="30" width="30" /></a></td>
+                                <td id="rowTable" class="table-info"><a href="@Url.Action("VorhangschlossRout","Home", new { id = item.Id })"><img src="@("/image/3d-modeling.png")" height="30" width="30" /></a></td>
                             }
 
                         </tr>
